--- a/style.css
+++ b/style.css
@@ -318,7 +318,7 @@ nav .fa-solid {
         text-align: center;
         margin-left: 0;
     }
-    .social-icons a {
+    .social-icons a i {
         text-decoration: none;
         color: transparent;
     }
