--- a/style.css
+++ b/style.css
@@ -320,7 +320,7 @@ nav .fa-solid {
     }
     .social-icons a i {
         text-decoration: none;
-        color: purple;
+        color: #fff;
     }
 
 }
