--- a/style.css
+++ b/style.css
@@ -318,9 +318,9 @@ nav .fa-solid {
         text-align: center;
         margin-left: 0;
     }
-    .social-icons a i {
+    .social-icons a {
         text-decoration: none;
-        color: #fff;
+        color: inherit;
     }
 
 }
