--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    -webkit-touch-callout: none;
     font-family: 'Poppins', 'sans-serif';
     box-sizing: border-box;
 }
