--- a/style.css
+++ b/style.css
@@ -330,7 +330,7 @@ nav .fa-solid {
         webkit-touch-callout: none;
     }
     .social-icons a {
-        color: dark purple;
+        color: #6a0dad;
         text-decoration: none;
     }
 }
