--- a/style.css
+++ b/style.css
@@ -324,6 +324,7 @@ nav .fa-solid {
 
     .details {
         text-align: center;
+        color: #6a0dad;
         margin-left: 0;
     }
     .details p a {
