--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ nav ul li a:hover::after {
 }
 
 .work-list h2 {
-    color: #fff;
+    color: #6a0dad;
     font-size: 30px;
     font-weight: 500;
     margin-bottom: 15px;
