--- a/style.css
+++ b/style.css
@@ -224,6 +224,7 @@ nav ul li a:hover::after {
 .details p {
     margin-top: 10px;
     font-size: 16px;
+    text-decoration: none;
 }
 
 .details p a {
