--- a/style.css
+++ b/style.css
@@ -327,6 +327,7 @@ nav .fa-solid {
 
     .details p a {
         webkit-touch-callout: none;
+        -webkit-user-select: none;
     }
 
     .social-icons {
