--- a/style.css
+++ b/style.css
@@ -216,6 +216,27 @@ nav ul li a:hover::after {
     line-height: 1.5;
 }
 
+
+.text{
+    text-align: center;
+    font-size: 14px;
+    font-weight: 200;
+    color: #fff;
+}
+
+.btn{
+    display: block;
+    margin: 20px auto;
+    margin-bottom: 0;
+    width: fit-content;
+    border: 1px solid #ff004f;
+    padding: 14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: #fff;
+    background: #ff004f;
+}
+
 .details {
     margin-top: 30px;
     margin-left: 42%;
